Fixes problem with code editor not visible

--- a/app/styles/code.scss
+++ b/app/styles/code.scss
@@ -7,6 +7,7 @@
     }
     .code-ide {
         height: 100% !important;
+        position: relative;
     }
     .fieldset--left, .fieldset--right {
         padding-top: 0;
